styles/typography.css
/* ... */
::before, ::after
  /* https://stackoverflow.com/questions/7327326/what-is-the-difference-between-before-and-before */
  { text-decoration: inherit }

body {
  margin: 2em auto var(--margin-collapse-bugfix);
  text-rendering: optimizeSpeed; /* https://css-tricks.com/almanac/properties/t/text-rendering/ */
}
body > * { margin: var(--viewport) }

body > header,
body > main,
body > aside,
body > footer
  { outline: 0.3em dashed }

body > header { }
body > main   { }
body > aside {
  /* font-size: var(--smaller); */ /* 90% of 1.618em */
}
body > footer
  { text-align: center }

/**
 * Correct the font size and margin on `h1` elements within `section` and
 * `article` contexts in Chrome, Firefox, and Safari.
 * - http://webtypography.net/3.1.1
 */
hgroup { }
header, h1, h2, h3, h4, h5, h6 {
  font-weight: bold;
  margin: var(--margin) var(--font-size) auto;
  text-shadow: 0.05em 0.05em 0.2em var(--text-shadow);
}
header { --fs: calc(var(--font-size) * var(--larger));
  font-size: var(-fs);
  /* http://webtypography.net/3.2.1 */
  /* http://webtypography.net/3.2.2 */
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/font-variant-caps */
  font-variant-caps: small-caps;
}
header *
  { text-transform: initial }
section > header
  {font-size: var(--largest);--fs: 1.681em;font-size: calc( var(--largest) * var(--golden-ratio) );}

a:has(header, h1, h2, h3, h4, h5, h6),
:where(header, h1, h2, h3, h4, h5, h6) a
  { color: currentColor }
h1 {
  /* TODO: calc () */
  font-weight: unset;
  text-shadow: 0.04em 0.04em 0;
  line-height: var(--line-height);
  -webkit-text-fill-color: Canvas;
  -webkit-text-stroke-width: thin;
  -webkit-text-stroke-color: GrayText;
}
body * > h1
  { font-size: 2em; /* Override container H1s - Full discussion here */ }

/* hyperlinks */
a { /* TODO: migrate ARIA to accessibility.css */
  text-underline-offset: 0;
  text-decoration-thickness: .168em;
  text-decoration-color: transparent;
  -webkit-text-decoration-skip-ink: none;
          text-decoration-skip-ink: none;
}
a:hover {
  text-decoration-color: ActiveText;
}
a::before, a::after {
  text-decoration: none;
  margin-right: 0.1618em;
}

a.logo {
  font-size: 2em;
  line-height: 2em;
  white-space: nowrap;
  margin-bottom: 0.2em
}
nav li a:hover {
  font-weight: bolder;
  text-decoration: none;
}

hr { /* https://www.lifewire.com/styling-horizontal-rule-tag-3466399 */
  color: currentColor;
  margin: 3.612em auto;
  background-color: currentColor;
}

/* CSS3 Lists
 * https://drafts.csswg.org/css-lists-3/
 * Styling lists - https://developer.mozilla.org/en-US/docs/Learn/CSS/Styling_text/Styling_lists
 */
dl, ol, ul {
  /* max-width: 70ch; */
  width: 83%;
  text-align: start;
  font-size: var(--larger);
  margin: var(--margin-collapse-bugfix) auto var(--font-size);
  /* padding: var(--margin-collapse-bugfix) 0 var(--margin-collapse-bugfix) var(--font-size); */
  list-style-position: inside;
}
dl dl, ol ol, ol ul, ul ol, ul ul {
  margin-bottom: var(--margin-collapse-bugfix);
  display: inherit;
  background: yellow;
  width: auto;
}
nav > details > ul
  { margin-block: 1ch }
dt {
  font-weight: bolder;
  line-height: 3.6182ch;
  padding: var(--margin-collapse-bugfix) 1ch;
  margin: 0.6182ch 0 var(--margin-collapse-bugfix);
}
dd, li {
  /* margin: var(--margin-collapse-bugfix) var(--font-size) 0.16182em var(--line-height); */
}
dd, li li
  {font-size: var(--smaller);}
dd dd:first-of-type, li li:first-of-type {
  margin-top: 0.16182em;
}
nav li, nav li {
  margin: 0;
  padding-bottom: 0
}
nav dd, nav li li
  { font-size: 1em }
nav dt + dd, nav li li:first-of-type
  { margin-top: 0 }
details > dl, details > dd,
details > ol li, details > ul li
  { margin-left: 0 }

abbr {
  /* http://webtypography.net/3.2.2 */
  font-style: normal;
  font-variant-caps: all-small-caps;
  font-variant-numeric: oldstyle-nums;
}
abbr[title] {
  border-bottom: 0;
  text-decoration-skip-ink: none;
  text-decoration: underline dotted;
}

del, s {
  opacity: 0.618;
  text-decoration: line-through;
  text-decoration-style: wavy
}
del {
  text-decoration-color: ActiveText
}
ins {
  text-decoration-color: HighlightText
}

del::before
  { content: '−' /* https://en.wikipedia.org/wiki/Dash */ }

ins::before
  { content: '+' }

em {
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/text-emphasis */
  padding-inline: calc(.1682ch * var(--GOLDEN-RATIO));
}
b, strong
  { font-weight: bolder }
p {
  display: flow-root; /* https://css-tricks.com/display-flow-root/ */
  /* https://www.edgee.net/what-font-size-should-you-use-for-body-copy-text-and-why/ */
    /* 16x0.81=13 */
}
p, q, address {
  max-width: 80ch;
  padding: 0 var(--line-height);
  margin: var(--margin-collapse-bugfix) auto var(--line-height);
}

pre, code, kbd, samp {
  padding: 0 0.1618em;
  background:  ButtonFace;
}
pre {
  overflow: auto;
  text-align: initial;
  margin: var(--p-margin);
}
code {
  white-space: nowrap;
}
pre code {
  margin: var(--line-height);
  font-size:  var(--smaller);
}
header code, h1 code {
  font-variant-caps: initial;
}

figcaption {
  font-size: 86%;
  font-style: italic;
}

/* quotes */
q {
  font-style: italic;
  vertical-align: top;
  -webkit-box-decoration-break: clone;
  box-decoration-break: clone;
   /*
    - https://tympanus.net/codrops/css_reference/quotes/
    - https://developer.mozilla.org/en-US/docs/Web/CSS/quotes
  */
  quotes: "\201C""\201D""\2018""\2019""\201C""\201D""\2018""\2019";
}
q q {
}
p q, q q {
  padding-inline: initial;
  font-size: var(--smaller);
}

q::before
  {}
q::after
  { content: close-quote }
/* ... */

